DistFiles/factoryCollections/Templates/Basic Book/Basic Book.less
/* ... */
.imageOnBottom.A4Landscape.layout-style-SideBySide DIV.bloom-translationGroup
{
	height: 17.8cm !important;
	width: 45%;
	/*+placement:anchor-top-left 0px 0px;*/
	position: absolute;
	left: 0px;
	top: 0px;
}
.imageOnTop.A4Landscape.layout-style-SideBySide.bloom-monolingual .bloom-editable
{
	height: 17.7cm !important;
}
.imageOnTop.A4Landscape.layout-style-SideBySide DIV.bloom-translationGroup
{
	height: 100% !important;
	width: 45%;
	/*+placement:anchor-top-left 549px 2px;*/
	position: absolute !important;
	left: 549px !important;
	top: 2px !important;
}
.imageOnTop.A4Landscape.layout-style-SideBySide DIV.bloom-editable
{
	/*[disabled]height:33%;*/
	/*[disabled]width:45%;*/
	/*[disabled]+placement:anchor-top-left 549px 2px;*/
	display: block;
}
.imageOnTop.A4Landscape.layout-style-SideBySide.bloom-bilingual .bloom-editable
{
	height: 8cm !important;
}
/*.......A4L Stacked*/
.imageOnTop.A4Landscape DIV.bloom-imageContainer
{
	width: 100%;
	/*+placement:anchor-top-left 0 0;*/
	position: absolute;
	left: 0;
	top: 0;
	height: 70% !important;
	/*[disabled]border:1px solid #000000;*/
}
.imageOnTop.layout-style-SplitAcrossPages DIV.bloom-imageContainer
{
	width: 100%;
	height: 100% !important;
}
.imageOnTop.layout-style-SplitAcrossPages .bloom-translationGroup
{
	width: 100%;
	/*Note, this is supposed to respond to bloom-centerVertically, but it doesn't. The jscript for CenterVerticallyInParent() always things the block is as big as the marginbox, so it doesn't center it*/
	/*[disabled]position:relative;*/
	/*So instead, we're settling for starting the text part of the way down*/
	position: relative !important;
	display: block !important;
	/*+placement:anchor-top-left 0px 30%;*/
	position: absolute;
	left: 0px;
	top: 30%;
}
.imageOnTop.layout-style-SplitAcrossPages .bloom-editable
{
	font-size: 300%;
}
DIV.imageOnTop.A4Landscape DIV.bloom-translationGroup
{
	height: 25% !important;
	/*+placement:anchor-bottom-left 0 0;*/
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
}
.imageOnTop.A4Landscape.bloom-monolingual DIV.bloom-editable
{
	height: 100%;
}
.imageOnTop.A4Landscape.bloom-bilingual DIV.bloom-editable
{
	height: 50%;
}
.imageOnTop.A4Landscape.bloom-trilingual DIV.bloom-editable
{
	height: 30%;
}
.imageOnTop.A4Landscape.bloom-trilingual DIV.bloom-imageContainer
{
	width: 100%;
	/*+placement:anchor-top-left 0 0;*/
	position: absolute;
	left: 0;
	top: 0;
	height: 45% !important;
	/*[disabled]border:1px solid #000000;*/
}
DIV.imageOnTop.A4Landscape.bloom-trilingual DIV.bloom-translationGroup
{
	height: 50% !important;
	/*+placement:anchor-bottom-left 0 0;*/
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
}
DIV.imageOnTop.A4Landscape.bloom-trilingual DIV.bloom-editable
{
	/*[disabled]+placement:anchor-top-left 549px 2px;*/
	width: 100%;
	height: 30%;
}
/*...... A5P mono*/
.imageOnTop.bloom-monolingual DIV.bloom-editable
{
	/*[disabled]height:100%;*/
	/*[disabled]width:100%;*/
	/*[disabled]display:table-cell;*/
}
DIV.imageOnTop.A5Portrait.bloom-monolingual DIV.bloom-translationGroup
{
	height: 48% !important;
	width: 100%;
	/*+placement:anchor-bottom-left 0 0;*/
	position: absolute;
	left: 0;
	bottom: 0;
}
DIV.imageOnTop.A4Portrait.bloom-monolingual DIV.bloom-translationGroup
{
	height: 48% !important;
	width: 100%;
	/*+placement:anchor-bottom-left 0 0;*/
	position: absolute;
	left: 0;
	bottom: 0;
}
/*........bilingual, placing 1st lang on top, 2nd below the picture*/
.imageOnTop.A5Portrait.bloom-bilingual DIV.bloom-imageContainer
{
	height: 30% !important;
	/*+placement:anchor-top-left 0px 228px;*/
	position: absolute;
	left: 0px;
	top: 228px;
}
.imageOnTop.A5Portrait.bloom-bilingual DIV.bloom-translationGroup
{
	height: 100%;
	/*+placement:anchor-bottom-left 0 0;*/
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
}
.imageOnTop.A4Portrait.bloom-bilingual DIV.bloom-imageContainer
{
	height: 30% !important;
	/*+placement:anchor-top-left 0px 35%;*/
	position: absolute;
	left: 0px;
	top: 35%;
}
.imageOnTop.A4Portrait.bloom-bilingual DIV.bloom-translationGroup
{
	height: 100%;
	/*+placement:anchor-bottom-left 0 0;*/
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
}
.imageOnTop.bloom-bilingual DIV.bloom-editable
{
	height: 30%;
}
.imageOnTop.bloom-bilingual DIV.bloom-editable.bloom-content2
{
	position: absolute;
	left: 0px;
	bottom: 0px;
}
/*--------trilingual, with 1st lang on top, 2nd and 3rd below the picture*/
.imageOnTop.A5Portrait.bloom-trilingual DIV.bloom-imageContainer
{
	height: 27% !important;
	/*+placement:anchor-top-left 1px 196px;*/
	position: absolute;
	left: 1px;
	top: 196px;
}
DIV.imageOnTop.A5Portrait.bloom-trilingual DIV.bloom-translationGroup
{
	height: 100%;
	/*+placement:anchor-bottom-left 0 0;*/
	position: absolute;
	left: 0;
	bottom: 0;
	width: 100%;
}
.imageOnTop.bloom-trilingual .bloom-content1
{
	height: 26%;
}
.imageOnTop.A5Portrait.bloom-trilingual DIV.bloom-editable.bloom-content2
{
	height: 19%;
	/*+placement:shift 0 33%;*/
	position: relative;
	left: 0;
	top: 33%;
}
.imageOnTop.A5Portrait.bloom-trilingual DIV.bloom-editable.bloom-content3
{
	height: 19%;
	/*+placement:shift 0px 33%;*/
	position: relative;
	left: 0px;
	top: 33%;
	/*this margin is to separate us from content2 a bit*/
	margin-top: 12px;
}
/*Image In Middle*/
DIV.imageInMiddle.bloom-monolingual DIV.bloom-translationGroup DIV
{
	height: 100% !important;
	width: 100%;
}
DIV.imageInMiddle.bloom-bilingual DIV.bloom-translationGroup DIV
{
	height: 50% !important;
	width: 100%;
}
DIV.imageInMiddle.bloom-trilingual DIV.bloom-translationGroup DIV
{
	height: 33% !important;
	width: 100%;
}
DIV.imageInMiddle DIV.bloom-translationGroup.top
{
	height: 30%;
	width: 100%;
}
DIV.imageInMiddle.bloom-trilingual DIV.bloom-translationGroup.top
{
	height: 6.9cm;
	width: 488px;
	/*+placement:anchor-top-left 26px 30px;*/
	position: absolute;
	left: 26px;
	top: 30px;
}
/* ... */

